# tjm-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  diesel.toml  log4rs.yml  postgres.yml
.github/workflows/: deploy.yml  dev.yml  prod.yml
migrations/2024-06-24-124439_create_comments/: up.sql
migrations/2024-06-25-103304_companies/: up.sql
migrations/2024-06-25-122030_jobs/: up.sql
src/: api.rs  db.rs  error.rs  main.rs  models.rs  schema.rs  utils.rs
