[package]
name = "tjm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version= "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
