[package]
name = "tjm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
anyhow = "1.0.86"
chrono = { version= "0.4.38", features = ["serde"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
nanoid = "0.4.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
thiserror = "1.0.63"
aws-sdk-s3 = "1.46.0"
image = "0.25.2"
aws-config = "1.5.5"
